RESOLVED FIXED217395
zappos.com: Dropdown - 'Quantity' option size different
https://bugs.webkit.org/show_bug.cgi?id=217395
Summary zappos.com: Dropdown - 'Quantity' option size different
Aditya Keerthi
Reported 2020-10-06 11:01:25 PDT
The size of the options differs from Chrome and Firefox.
Attachments
Before (Safari) (237.13 KB, image/png)
2020-10-06 11:02 PDT, Aditya Keerthi
no flags
Current (Chrome) (240.53 KB, image/png)
2020-10-06 11:03 PDT, Aditya Keerthi
no flags
Patch (2.89 KB, patch)
2020-10-06 11:13 PDT, Aditya Keerthi
no flags
After (Safari) (247.64 KB, image/png)
2020-10-06 11:13 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2020-10-06 11:01:56 PDT
Aditya Keerthi
Comment 2 2020-10-06 11:02:44 PDT
Created attachment 410659 [details] Before (Safari)
Aditya Keerthi
Comment 3 2020-10-06 11:03:04 PDT
Created attachment 410660 [details] Current (Chrome)
Aditya Keerthi
Comment 4 2020-10-06 11:13:00 PDT
Aditya Keerthi
Comment 5 2020-10-06 11:13:18 PDT
Created attachment 410663 [details] After (Safari)
Tim Horton
Comment 6 2020-10-06 11:34:39 PDT
Comment on attachment 410662 [details] Patch Seems like it might be testable?
Aditya Keerthi
Comment 7 2020-10-06 12:00:37 PDT
(In reply to Tim Horton from comment #6) > Comment on attachment 410662 [details] > Patch > > Seems like it might be testable? Currently we don't have any tests related to the presented NSMenu. I thought about an API test where we check the view hierarchy, get the NSMenu and its NSMenuItems, and then perform assertions on an NSMenuItem's attributedString – but we don't have a way to know if menu is showing since its presentation is asynchronous.
EWS
Comment 8 2020-10-07 08:53:03 PDT
Committed r268126: <https://trac.webkit.org/changeset/268126> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410662 [details].
Note You need to log in before you can comment on or make changes to this bug.